--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
     <div class="container-fluid p-0">
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
+          <span class="d-lg-none d-xs-block d-sm-block mypicsm">
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" style="width:800px; margin:0 auto;" src="img/profile.jpeg" alt="">
+          </span>
+        <br>
           <h1 class="mb-0">Pradesh Kumar</span>
          </h1>
           <div class="subheading mb-5">Software Developer, Zoho Corporation<br><span class="themeColor">Contact:</span> +91 9566071048
