--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="docs/resume.pdf" target="_blank" download="Pradesh Kumar_Resume.pdf">Download Resume</a>
+            <a class="nav-link js-scroll-trigger" href="docs/resume_v1.pdf" target="_blank" download="Pradesh Kumar_Resume.pdf">Download Resume</a>
           </li>
         </ul>
       </div>
