Adding Java Sololearn cert

--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
                   <div id="certificates" class="carousel slide text-center" data-ride="carousel">
 
                     <!-- Wrapper for slides -->
-                    
+
                     <div class="carousel-inner">
-                     
+
                       <div class="carousel-item active">
                         <img src="img/Certificates/freeCodeCamp_frontEnd.png" class="certificates-div">
                       </div>
@@ -312,6 +312,11 @@
                       <div class="carousel-item">
                         <img src="img/Certificates/TCS_OnSpotAward.png" class="certificates-div">
                       </div>
+
+                      <div class="carousel-item">
+                        <img src="img/Certificates/java_sololearn" class="certificates-div">
+                      </div>
+
                     </div>
 
                     <br>
