Adding Page Hits Feature

--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
             </li>
           </ul>
         </div>
-      </nav>
+
+      <div class="page-views">
+        Page Hits:
+        <span>
+            <img height='29' src='http://www.imgserver.org/drabbed-5e.png' border='0' alt="" width='91' class="hit-count-image">
+        </span>
+      </div>
+</nav>
 
       <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
