--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h1 class="mb-0">Pradesh Kumar</span>
             </h1>
             <div class="subheading mb-5">Software Developer, Zoho Corporation<br><span class="themeColor">Contact:</span> +91 9566071048
-              <br><a href="mailto:name@email.com">pradesh.kumar@gmail.com</a>
+              <br><a href="mailto:name@email.com">pradeshkumar1@outlook.com</a>
             </div>
             <p class="mb-5">I'm basically gregarious person and a quick learner. My long term goal is to contribute something of greater good to this world. My moto is to LEARN, MASTER and INNOVATE !!.</p>
 
