--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Pradesh Kumar</title>
 
-  <link href='http://pradeshkumar.blogspot.in/favicon.ico' rel='icon' type='image/x-icon' />
+  <link href='img/favicon.ico' rel='icon' type='image/x-icon' />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
               <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="docs/resume_v1.pdf" target="_blank" download="Pradesh Kumar_Resume.pdf">Download Resume</a>
+              <a class="nav-link js-scroll-trigger" href="docs/resume_v1.pdf" target="_blank" rel="noopener" download="Pradesh Kumar_Resume.pdf">Download Resume</a>
             </li>
           </ul>
         </div>
@@ -85,7 +85,7 @@
             <ul class="list-inline list-social-icons mb-0">
 
               <li class="list-inline-item">
-                <a href="https://twitter.com/iampradesh" target="_blank">
+                <a href="https://twitter.com/iampradesh" target="_blank" rel="noopener">
                  <span class="fa-stack fa-lg">
                    <i class="fa fa-circle fa-stack-2x"></i>
                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -93,7 +93,7 @@
                </a>
              </li>
              <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/pradeshkumar/" target="_blank">
+              <a href="https://www.linkedin.com/in/pradeshkumar/" target="_blank" rel="noopener">
                <span class="fa-stack fa-lg">
                  <i class="fa fa-circle fa-stack-2x"></i>
                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -101,7 +101,7 @@
              </a>
            </li>
            <li class="list-inline-item">
-            <a href="https://github.com/pradesh-kumar" target="_blank">
+            <a href="https://github.com/pradesh-kumar" target="_blank" rel="noopener">
              <span class="fa-stack fa-lg">
                <i class="fa fa-circle fa-stack-2x"></i>
                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -109,7 +109,7 @@
            </a>
          </li>
          <li class="list-inline-item">
-          <a href="https://bitbucket.org/pradesh_kumar/" target="_blank">
+          <a href="https://bitbucket.org/pradesh_kumar/" target="_blank" rel="noopener">
            <span class="fa-stack fa-lg">
              <i class="fa fa-circle fa-stack-2x"></i>
              <i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
@@ -286,6 +286,9 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i> University Rank Holder - Department of EEE - Anna University</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i> On The Spot Award - Tata Consultancy Services</li>
+
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i> AMCAT Certified Software Developer
               <li>
